Added a copyRight banner to the end of the file.

--- a/index.html
+++ b/index.html
@@ -1,13 +1,4 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
-    <title>replit</title>
-    <link href="style.css" rel="stylesheet" type="text/css" />
-  </head>
-  <body>
-  <div id="main-header" class="center">
+<div id="main-header" class="center">
   <h1 class="main--title">Michael Paulsen</h1>
 </div>
 <p class="icon-eye"> </p>
@@ -51,6 +42,6 @@
   <p class="col-2"></p>
   </div>
 </section> 
-    <script src="script.js"></script>
-  </body>
-</html>
+<section id ="copy">
+  <p class = "center"> <span class = "cpy" ></span> 2022 Michael Paulsen </br> all rights reserved. </p> 
+</section> 
