added the scss file and fixed the lack of a header.

--- a/index.html
+++ b/index.html
@@ -1,4 +1,13 @@
-<div id="main-header" class="center">
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <title>replit</title>
+    <link href="style.css" rel="stylesheet" type="text/css" />
+  </head>
+  <body>
+  <div id="main-header" class="center">
   <h1 class="main--title">Michael Paulsen</h1>
 </div>
 <p class="icon-eye"> </p>
@@ -20,7 +29,7 @@
       <div class="row">
         <p class="col-4"></p>
       <p class="about-me__paragraph col-8">
-        I am Michael Paulsen, I have a <a href="youtube" class="youtube">Youtube</a>  channel and <a href="twitch.tv/skeleton_craft" class="twitch">Twitch</a> page, where I mostly Play Minecraft. However, in October I play some Doom (1993). And in November I play some Zelda <span class="italic">   [mainly OOT/MM because those are the games I own].</span> I also do some programming you can veiw my <a href="https://github.com/michaelpaulsen" class="github">GitHub</a>. 
+        I am Michael Paulsen, I have a <a href="youtube.com" class="youtube">Youtube</a>  channel and <a href="twitch.tv/skeleton_craft" class="twitch">Twitch</a> page, where I mostly Play Minecraft. However, in October I play some Doom (1993). And in November I play some Zelda <span class="italic">[mainly OOT/MM because those are the games I own].</span> I also do some programming you can veiw my <a href="https://github.com/michaelpaulsen" class="github">GitHub</a>. 
       </p>
         <p class="col-4"></p>
       </div>
@@ -42,6 +51,9 @@
   <p class="col-2"></p>
   </div>
 </section> 
-<section id ="copy">
+<section id ="section--copy">
   <p class = "center"> <span class = "cpy" ></span> 2022 Michael Paulsen </br> all rights reserved. </p> 
-</section> 
+</section>  
+    <script src="script.js"></script>
+  </body>
+</html>
